[package]
name = "questdb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
rustyline = "9.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable = "0.10"
csv = "1.1"
shellexpand = "2.1"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
sqlparser = "0.52.0"
futures-util = "0.3"

